--- a/src/app/savings/savings-account-view/transactions-tab/transactions-tab.component.html
+++ b/src/app/savings/savings-account-view/transactions-tab/transactions-tab.component.html
@@ -1,38 +1,56 @@
 <div class="tab-container mat-typography">
-  <div fxLayout="column" fxLayoutAlign="start">
-    <div class="container m-b-20" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
-      <mat-form-field fxFlex="31%">
-        <mat-label>{{'Saving_Account_Component.tabTransactions.labelTransactionDateFrom' | translate}}</mat-label>
-        <input matInput [matDatepicker]="transactionDateFromPicker" [formControl]="transactionDateFrom">
-        <mat-datepicker-toggle matSuffix [for]="transactionDateFromPicker"></mat-datepicker-toggle>
-        <mat-datepicker #transactionDateFromPicker></mat-datepicker>
-      </mat-form-field>
-
-      <mat-form-field fxFlex="31%">
-        <mat-label>{{'Saving_Account_Component.tabTransactions.labelTransactionDateTo' | translate}}</mat-label>
-        <input matInput [matDatepicker]="transactionDateToPicker" [formControl]="transactionDateTo">
-        <mat-datepicker-toggle matSuffix [for]="transactionDateToPicker"></mat-datepicker-toggle>
-        <mat-datepicker #transactionDateToPicker></mat-datepicker>
-      </mat-form-field>
-      <div class="action-button" fxFlex="31%" fxLayoutAlign="end" style="height: 50px" fxLayout="row" fxLayoutGap="20px">
-        <button mat-raised-button (click)="getData()" color="primary">Tìm kiếm</button>
-        <button mat-raised-button color="primary" [routerLink]="['export']">Báo cáo</button>
+  <div class="container m-b-20" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
+    <div fxFlex="18%" fxLayout="column wrap">
+      <div fxLayout="row wrap" class="container m-b-20">
+        <img src="assets/images/icons/income.svg">
+        <div style="display: flex;" fxLayout="column">
+          <span style="font-size: 20px; margin-top: 8px; padding-top: 5px;">{{totalDeposit|money}}</span>
+          <span>Tăng</span>
+        </div>
+      </div>
+      <div fxLayout="row wrap" class="container m-b-20">
+        <img src="assets/images/icons/withdraw_total.svg">
+        <div style="display: flex;" fxLayout="column">
+          <span style="font-size: 20px; margin-top: 8px; padding-top: 5px;">{{totalWithdraw|money}}</span>
+          <span>Giảm</span>
+        </div>
       </div>
     </div>
-    <div class="container m-b-20" [formGroup]="form" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
-      <mat-form-field fxFlex="31%">
-        <mat-label>{{'Kiểu giao dịch' | translate}}</mat-label>
-        <input formControlName="paymentDetail" matInput>
-      </mat-form-field>
+    <div fxFlex="78%" fxLayout="column" fxLayoutAlign="start">
+      <div class="container m-b-20" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
+        <mat-form-field fxFlex="31%">
+          <mat-label>{{'Saving_Account_Component.tabTransactions.labelTransactionDateFrom' | translate}}</mat-label>
+          <input matInput [matDatepicker]="transactionDateFromPicker" [formControl]="transactionDateFrom">
+          <mat-datepicker-toggle matSuffix [for]="transactionDateFromPicker"></mat-datepicker-toggle>
+          <mat-datepicker #transactionDateFromPicker></mat-datepicker>
+        </mat-form-field>
+        <mat-form-field fxFlex="31%">
+          <mat-label>{{'Saving_Account_Component.tabTransactions.labelTransactionDateTo' | translate}}</mat-label>
+          <input matInput [matDatepicker]="transactionDateToPicker" [formControl]="transactionDateTo">
+          <mat-datepicker-toggle matSuffix [for]="transactionDateToPicker"></mat-datepicker-toggle>
+          <mat-datepicker #transactionDateToPicker></mat-datepicker>
+        </mat-form-field>
+        <div class="action-button" fxFlex="31%" fxLayoutAlign="end" style="height: 50px" fxLayout="row"
+             fxLayoutGap="20px">
+          <button mat-raised-button (click)="getData()" color="primary">Tìm kiếm</button>
+          <button mat-raised-button color="primary" (click)="downloadReport()">Báo cáo</button>
+        </div>
+      </div>
+      <div class="container m-b-20" [formGroup]="form" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
+        <mat-form-field fxFlex="31%">
+          <mat-label>{{'Kiểu giao dịch' | translate}}</mat-label>
+          <input formControlName="paymentDetail" matInput>
+        </mat-form-field>
 
-      <mat-form-field fxFlex="31%">
-        <mat-label>{{'Loại giao dịch' | translate}}</mat-label>
-        <input formControlName="txnCode" matInput>
-      </mat-form-field>
-      <mat-form-field fxFlex="31%">
-        <mat-label>{{'Ghi chú' | translate}}</mat-label>
-        <input formControlName="note" matInput>
-      </mat-form-field>
+        <mat-form-field fxFlex="31%">
+          <mat-label>{{'Loại giao dịch' | translate}}</mat-label>
+          <input formControlName="txnCode" matInput>
+        </mat-form-field>
+        <mat-form-field fxFlex="31%">
+          <mat-label>{{'Ghi chú' | translate}}</mat-label>
+          <input formControlName="note" matInput>
+        </mat-form-field>
+      </div>
     </div>
   </div>
   <div class="mat-elevation-z1 m-b-25">
@@ -41,46 +59,62 @@
 
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef> ID</th>
-        <td mat-cell *matCellDef="let transaction"> {{ transaction.id }} </td>
+        <td mat-cell *matCellDef="let transaction"> {{ transaction.txnId }} </td>
       </ng-container>
 
       <ng-container matColumnDef="transactionDate">
-        <th mat-header-cell *matHeaderCellDef> Transaction Date</th>
-        <td mat-cell *matCellDef="let transaction"> {{ transaction.date | date }} </td>
+        <th mat-header-cell *matHeaderCellDef> Ngày giao dịch</th>
+        <td mat-cell *matCellDef="let transaction"> {{ transaction.transactionDate | date }} </td>
       </ng-container>
 
       <ng-container matColumnDef="transactionType">
-        <th mat-header-cell *matHeaderCellDef> Transaction Type</th>
-        <td mat-cell *matCellDef="let transaction"> {{ transaction.transactionType.value  }} </td>
+        <th mat-header-cell *matHeaderCellDef> Kiểu giao dịch</th>
+        <td mat-cell *matCellDef="let transaction">
+          <span style="text-align: center; display: flex;" *ngIf="transaction.txnCode === 'D'"><img
+            src="assets/images/icons/deposit.svg"/>Gửi tiền</span>
+          <span style="text-align: center; display: flex;" *ngIf="transaction.txnCode === 'W'"><img
+            src="assets/images/icons/withdraw.svg"/>Rút tiền</span>
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="debit">
-        <th mat-header-cell *matHeaderCellDef> Debit</th>
+        <th mat-header-cell *matHeaderCellDef> Số tiền</th>
         <td mat-cell
-            *matCellDef="let transaction"> {{ isDebit(transaction.transactionType) ? (transaction.amount | money) : 'N/A'}} </td>
+            *matCellDef="let transaction"> {{ (transaction.amount | money)}} </td>
       </ng-container>
 
       <ng-container matColumnDef="credit">
-        <th mat-header-cell *matHeaderCellDef> Credit</th>
+        <th mat-header-cell *matHeaderCellDef> Cân đối</th>
         <td mat-cell
-            *matCellDef="let transaction"> {{ !isDebit(transaction.transactionType) ? (transaction.amount| money) : 'N/A' }} </td>
+            *matCellDef="let transaction"> {{ (transaction.balance| money)}} </td>
       </ng-container>
 
-<!--      <ng-container matColumnDef="balance">-->
-<!--        <th mat-header-cell-->
-<!--            *matHeaderCellDef> {{'Saving_Account_Component.tabTransactions.labelBalance'|translate}} </th>-->
-<!--        <td mat-cell *matCellDef="let transaction"> {{ transaction.runningBalance | money }} </td>-->
-<!--      </ng-container>-->
+      <ng-container matColumnDef="type">
+        <th mat-header-cell *matHeaderCellDef> Loại giao dịch</th>
+        <td mat-cell
+            *matCellDef="let transaction"> {{ (transaction.paymentDetailId)}} </td>
+      </ng-container>
 
-<!--      <ng-container matColumnDef="viewReciept">-->
-<!--        <th mat-header-cell *matHeaderCellDef> View Reciept</th>-->
-<!--        <td mat-cell *matCellDef="let transaction">-->
-<!--          <button class="account-action-button" mat-raised-button color="primary" (click)="routeEdit($event)"-->
-<!--                  [routerLink]="[transaction.id, 'reciept']">-->
-<!--            <i class="fa fa-file" matTooltip="View Reciept"></i>-->
-<!--          </button>-->
-<!--        </td>-->
-<!--      </ng-container>-->
+      <ng-container matColumnDef="note">
+        <th mat-header-cell *matHeaderCellDef> Ghi chú</th>
+        <td mat-cell
+            *matCellDef="let transaction"> {{ (transaction.note)}} </td>
+      </ng-container>
+      <!--      <ng-container matColumnDef="balance">-->
+      <!--        <th mat-header-cell-->
+      <!--            *matHeaderCellDef> {{'Saving_Account_Component.tabTransactions.labelBalance'|translate}} </th>-->
+      <!--        <td mat-cell *matCellDef="let transaction"> {{ transaction.runningBalance | money }} </td>-->
+      <!--      </ng-container>-->
+
+      <!--            <ng-container matColumnDef="viewReciept">-->
+      <!--              <th mat-header-cell *matHeaderCellDef> View Reciept</th>-->
+      <!--              <td mat-cell *matCellDef="let transaction">-->
+      <!--                <button class="account-action-button" mat-raised-button color="primary" (click)="routeEdit($event)"-->
+      <!--                        [routerLink]="[transaction.id, 'reciept']">-->
+      <!--                  <i class="fa fa-file" matTooltip="View Reciept"></i>-->
+      <!--                </button>-->
+      <!--              </td>-->
+      <!--            </ng-container>-->
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="select-row"
