--- a/src/app/savings/savings-account-view/transactions-tab/transactions-tab.component.html
+++ b/src/app/savings/savings-account-view/transactions-tab/transactions-tab.component.html
@@ -5,14 +5,14 @@
         <img src="assets/images/icons/income.svg">
         <div style="display: flex;" fxLayout="column">
           <span style="font-size: 20px; margin-top: 8px; padding-top: 5px;">{{totalDeposit|money}}</span>
-          <span>Tăng</span>
+          <span>{{'Saving_Account_Component.tabTransactions.msgIncrease' | translate}}</span>
         </div>
       </div>
       <div fxLayout="row wrap" class="container m-b-20">
         <img src="assets/images/icons/withdraw_total.svg">
         <div style="display: flex;" fxLayout="column">
           <span style="font-size: 20px; margin-top: 8px; padding-top: 5px;">{{totalWithdraw|money}}</span>
-          <span>Giảm</span>
+          <span>{{'Saving_Account_Component.tabTransactions.msgDecrease' | translate}}</span>
         </div>
       </div>
     </div>
@@ -32,22 +32,25 @@
         </mat-form-field>
         <div class="action-button" fxFlex="31%" fxLayoutAlign="end" style="height: 50px" fxLayout="row"
              fxLayoutGap="20px">
-          <button mat-raised-button (click)="getData()" color="primary">Tìm kiếm</button>
-          <button mat-raised-button color="primary" (click)="downloadReport()">Báo cáo</button>
+          <button mat-raised-button (click)="getData()" color="primary">{{'Saving_Account_Component.tabTransactions.btnSearch' | translate}}</button>
+          <button mat-raised-button color="primary" (click)="downloadReport()">{{'Saving_Account_Component.tabTransactions.btnExport' | translate}}</button>
         </div>
       </div>
       <div class="container m-b-20" [formGroup]="form" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
+        <mat-form-field fxFlex="31%" *ngIf="form.contains('txnCode')">
+          <mat-label>{{'Saving_Account_Component.tabTransactions.lblTransactionType' |translate}}</mat-label>
+          <mat-select formControlName="txnCode">
+            <mat-option *ngFor="let type of transactionType" [value]="type.id">
+              {{ type.name | translate }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
         <mat-form-field fxFlex="31%">
-          <mat-label>{{'Kiểu giao dịch' | translate}}</mat-label>
+          <mat-label>{{'Saving_Account_Component.tabTransactions.lblTransactionType2' | translate}}</mat-label>
           <input formControlName="paymentDetail" matInput>
         </mat-form-field>
-
         <mat-form-field fxFlex="31%">
-          <mat-label>{{'Loại giao dịch' | translate}}</mat-label>
-          <input formControlName="txnCode" matInput>
-        </mat-form-field>
-        <mat-form-field fxFlex="31%">
-          <mat-label>{{'Ghi chú' | translate}}</mat-label>
+          <mat-label>{{'Saving_Account_Component.tabTransactions.lblNote' | translate}}</mat-label>
           <input formControlName="note" matInput>
         </mat-form-field>
       </div>
@@ -63,40 +66,40 @@
       </ng-container>
 
       <ng-container matColumnDef="transactionDate">
-        <th mat-header-cell *matHeaderCellDef> Ngày giao dịch</th>
+        <th mat-header-cell *matHeaderCellDef>{{'Saving_Account_Component.tabTransactions.lblTransactionDate' | translate}}</th>
         <td mat-cell *matCellDef="let transaction"> {{ transaction.transactionDate | date }} </td>
       </ng-container>
 
       <ng-container matColumnDef="transactionType">
-        <th mat-header-cell *matHeaderCellDef> Kiểu giao dịch</th>
+        <th mat-header-cell *matHeaderCellDef> {{'Saving_Account_Component.tabTransactions.lblTransactionType' | translate}}</th>
         <td mat-cell *matCellDef="let transaction">
           <span style="text-align: center; display: flex;" *ngIf="transaction.txnCode === 'D'"><img
-            src="assets/images/icons/deposit.svg"/>Gửi tiền</span>
+            src="assets/images/icons/deposit.svg"/>{{'Saving_Account_Component.tabTransactions.lblDeposit' | translate}}</span>
           <span style="text-align: center; display: flex;" *ngIf="transaction.txnCode === 'W'"><img
-            src="assets/images/icons/withdraw.svg"/>Rút tiền</span>
+            src="assets/images/icons/withdraw.svg"/>{{'Saving_Account_Component.tabTransactions.lblWithdraw' | translate}}</span>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="debit">
-        <th mat-header-cell *matHeaderCellDef> Số tiền</th>
+        <th mat-header-cell *matHeaderCellDef>{{'Saving_Account_Component.tabTransactions.lblAmount' | translate}}</th>
         <td mat-cell
             *matCellDef="let transaction"> {{ (transaction.amount | money)}} </td>
       </ng-container>
 
       <ng-container matColumnDef="credit">
-        <th mat-header-cell *matHeaderCellDef> Cân đối</th>
+        <th mat-header-cell *matHeaderCellDef>{{'Saving_Account_Component.tabTransactions.lblProportional' | translate}}</th>
         <td mat-cell
             *matCellDef="let transaction"> {{ (transaction.balance| money)}} </td>
       </ng-container>
 
       <ng-container matColumnDef="type">
-        <th mat-header-cell *matHeaderCellDef> Loại giao dịch</th>
+        <th mat-header-cell *matHeaderCellDef>{{'Saving_Account_Component.tabTransactions.lblTransactionType2' | translate}}</th>
         <td mat-cell
             *matCellDef="let transaction"> {{ (transaction.paymentDetailId)}} </td>
       </ng-container>
 
       <ng-container matColumnDef="note">
-        <th mat-header-cell *matHeaderCellDef> Ghi chú</th>
+        <th mat-header-cell *matHeaderCellDef>{{'Saving_Account_Component.tabTransactions.lblNote' | translate}}</th>
         <td mat-cell
             *matCellDef="let transaction"> {{ (transaction.note)}} </td>
       </ng-container>
