standardize alertService, add "Scroll to top" rule and add 'Cancel' button into any stepper of create client screen
- Enhance Alert Interface model
- Enhance Alert service in web-app.component
- Fix existing alert msg to standard alert msg
- Add rule: "Scroll to top" on loading page

--- a/src/app/clients/client-stepper/client-general-step/client-general-step.component.html
+++ b/src/app/clients/client-stepper/client-general-step/client-general-step.component.html
@@ -252,6 +252,9 @@
     </mat-card>
   </div>
   <div fxLayout="row" class="margin-t" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="2%">
+    <button mat-raised-button (click)="clickCancel()">
+      {{'Client_Component.ClientStepper.Preview.buttonCancel'|translate}}
+    </button>
     <button mat-raised-button matStepperPrevious readonly>
       <fa-icon icon="arrow-left"></fa-icon>&nbsp;&nbsp;
       {{'Client_Component.ClientStepper.buttonPrevious' |translate}}
