--- a/src/app/clients/clients-view/identities-tab/identities-tab.component.html
+++ b/src/app/clients/clients-view/identities-tab/identities-tab.component.html
@@ -12,7 +12,10 @@
           <th mat-header-cell *matHeaderCellDef> Id </th>
           <td mat-cell *matCellDef="let identity">{{identity.id}}</td>
         </ng-container>
-
+      <ng-container matColumnDef="documentKey">
+        <th mat-header-cell *matHeaderCellDef> Document Key </th>
+        <td mat-cell *matCellDef="let identity">{{identity.documentKey}}</td>
+      </ng-container>
         <ng-container matColumnDef="description">
           <th mat-header-cell *matHeaderCellDef> Description </th>
           <td mat-cell *matCellDef="let identity"> {{identity.description}} </td>
