--- a/src/app/clients/clients-view/identities-tab/identities-tab.component.html
+++ b/src/app/clients/clients-view/identities-tab/identities-tab.component.html
@@ -1,10 +1,13 @@
-<div class="tab-container mat-typography">
+<div fxLayout="row wrap" fxLayoutGap="1%" fxLayout.lt-md="column">
 
-    <h3>Identities</h3>
-
-    <button mat-raised-button class="f-right" color="primary" (click)="addIdentifier()" *midasHasPermission="'CREATE_CLIENTIDENTIFIER'">
-      <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp; Add
-    </button>
+  <mat-card class="card-custom" fxFlex="100%">
+    <mat-card-header>
+      <mat-card-title class="f-left">Danh sách thẻ giao dịch:</mat-card-title>
+      <button mat-raised-button class="f-right" color="primary" (click)="addIdentifier()" *midasHasPermission="'CREATE_CLIENTIDENTIFIER'">
+        <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp; Add
+      </button>
+    </mat-card-header>
+    <mat-card-content>
 
     <table mat-table #identifiersTable [dataSource]="clientIdentities">
 
@@ -14,7 +17,10 @@
         </ng-container>
       <ng-container matColumnDef="documentKey">
         <th mat-header-cell *matHeaderCellDef> Document Key </th>
-        <td mat-cell *matCellDef="let identity">{{identity.documentKey}}</td>
+        <td mat-cell *matCellDef="let identity ; let i = index ">
+          {{identity.documentKey}}
+            <fa-icon style="color: red;" (click)="deleteIdentifier(identity.clientId,identity.id,i)" *midasHasPermission="'DELETE_CLIENTIDENTIFIER'" icon="times"></fa-icon>
+        </td>
       </ng-container>
         <ng-container matColumnDef="description">
           <th mat-header-cell *matHeaderCellDef> Description </th>
@@ -28,11 +34,13 @@
 
         <ng-container matColumnDef="documents">
           <th mat-header-cell *matHeaderCellDef>Identity Documents </th>
-          <td mat-cell *matCellDef="let identity">
+          <td mat-cell *matCellDef="let identity ; let i = index ">
             <div *ngFor="let document of identity.documents">
               {{document.name}}
               <fa-icon icon="cloud-download-alt" (click)="download(document.parentEntityId,document.id)" *midasHasPermission="'READ_DOCUMENT'"></fa-icon>
             </div>
+              <fa-icon style="color: green;" icon="cloud-upload-alt" (click)="uploadDocument(i,identity.id)" *midasHasPermission="'CREATE_DOCUMENT'"></fa-icon>
+
           </td>
         </ng-container>
 
@@ -46,11 +54,12 @@
         <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef> Actions </th>
           <td mat-cell *matCellDef="let identity; let i = index">
-            <button class="identity-action-button" mat-raised-button color="primary" (click)="uploadDocument(i,identity.id)" *midasHasPermission="'CREATE_DOCUMENT'">
-              <fa-icon icon="cloud-upload-alt"></fa-icon>
+            <button class="identity-action-button" mat-raised-button color="primary" [routerLink]="['/transaction']"  [queryParams]="{ identifierId: identity.id, clientId: identity.clientId, type: 'cash'}"  *midasHasPermission="'CREATE_DOCUMENT'">
+              Rút TM
             </button>
+            ||
             <button class="identity-action-button" mat-raised-button color="warn" (click)="deleteIdentifier(identity.clientId,identity.id,i)" *midasHasPermission="'DELETE_CLIENTIDENTIFIER'">
-              <fa-icon icon="times"></fa-icon>
+              Đáo HT
             </button>
           </td>
         </ng-container>
@@ -59,5 +68,67 @@
         <tr mat-row *matRowDef="let row; columns: identitiesColumns;"></tr>
 
     </table>
+  </mat-card-content>
+</mat-card>
 
+    <mat-card class="card-custom" fxFlex="100%">
+      <mat-card-header>
+        <mat-card-title>Danh sách tài khoản thanh toán/CMND/CCCD:</mat-card-title>
+        <button mat-raised-button class="f-right" color="primary" (click)="addIdentifier()" *midasHasPermission="'CREATE_CLIENTIDENTIFIER'">
+          <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp; Add
+        </button>
+      </mat-card-header>
+      <mat-card-content>
+
+    <table mat-table #identifiersTable [dataSource]="clientIdentitiesOther">
+
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef> Id </th>
+        <td mat-cell *matCellDef="let identity">{{identity.id}}</td>
+      </ng-container>
+    <ng-container matColumnDef="documentKey">
+      <th mat-header-cell *matHeaderCellDef> Document Key </th>
+      <td mat-cell *matCellDef="let identity ; let i = index ">
+        {{identity.documentKey}}
+        <fa-icon style="color: red;" (click)="deleteIdentifier(identity.clientId,identity.id,i)" *midasHasPermission="'DELETE_CLIENTIDENTIFIER'" icon="times"></fa-icon>
+
+      </td>
+    </ng-container>
+      <ng-container matColumnDef="description">
+        <th mat-header-cell *matHeaderCellDef> Description </th>
+        <td mat-cell *matCellDef="let identity"> {{identity.description}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="type">
+        <th mat-header-cell *matHeaderCellDef> type </th>
+        <td mat-cell *matCellDef="let identity"> {{identity.documentType.name}}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="documents">
+        <th mat-header-cell *matHeaderCellDef>Identity Documents </th>
+        <td mat-cell *matCellDef="let identity ; let i = index ">
+          <div *ngFor="let document of identity.documents">
+            {{document.name}}
+            <fa-icon icon="cloud-download-alt" (click)="download(document.parentEntityId,document.id)" *midasHasPermission="'READ_DOCUMENT'"></fa-icon>
+          </div>
+          <fa-icon style="color: green;" icon="cloud-upload-alt" (click)="uploadDocument(i,identity.id)" *midasHasPermission="'CREATE_DOCUMENT'"></fa-icon>
+
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef> Status </th>
+        <td mat-cell *matCellDef="let identity">
+            {{(identity.status==='clientIdentifierStatusType.active')?'active':'inactive'}}
+        </td>
+      </ng-container>
+
+
+
+      <tr mat-header-row *matHeaderRowDef="identitiesOtherColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: identitiesOtherColumns;"></tr>
+
+  </table>
+</mat-card-content>
+</mat-card>
 </div>
