--- a/src/app/clients/clients.component.html
+++ b/src/app/clients/clients.component.html
@@ -72,7 +72,7 @@
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;" [routerLink]="[row.id,'general']" class="select-row">
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" [routerLink]="[row.id,'general']" [queryParams]="{ typeViewClient: 'view'}" class="select-row">
       </tr>
     </table>
 
