--- a/src/app/core/shell/breadcrumb/breadcrumb.component.html
+++ b/src/app/core/shell/breadcrumb/breadcrumb.component.html
@@ -4,7 +4,10 @@
     <span *ngIf="breadcrumbs.length-1 !== 0" class="separator">
       <li *ngFor="let breadcrumb of breadcrumbs; let last = last" class="breadcrumb-label">
         <span *ngIf="!last" class="breadcrumb-link">
-          <a *ngIf="breadcrumb.url" [routerLink]="breadcrumb.url">{{ breadcrumb.label  | translate }}</a>
+          <!-- <a *ngIf="breadcrumb.url"
+          [routerLink]="breadcrumb.url"
+          >{{ breadcrumb.label  | translate }}</a> -->
+          <a *ngIf="breadcrumb.url">{{ breadcrumb.label  | translate }}</a>
           <span *ngIf="!breadcrumb.url">{{ breadcrumb.label  | translate }}</span>
         </span>
         <span *ngIf="last">{{ breadcrumb.label  | translate }}</span>
