--- a/src/app/home/mainboard/mainboard.component.html
+++ b/src/app/home/mainboard/mainboard.component.html
@@ -44,13 +44,17 @@
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"  class="select-row" [routerLink]="['/clients', row.id, 'identities']"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"  class="select-row"
+      [routerLink]="['/clients', row.id, 'identities']"
+      [queryParams]="{ typeViewClient: 'transaction'}"
+      ></tr>
 
       <!-- Row shown when there is no matching data. -->
       <tr class="mat-row" *matNoDataRow>
         <td class="mat-cell" colspan="4">No data matching the filter </td>
       </tr>
     </table>
+    <div *ngIf="dataSource?.length == 0">No records found</div>
     <div *ngIf="isLoading"
    style="display: flex; justify-content: center; align-items: center; background: white;">
   <mat-progress-spinner
