--- a/src/app/home/mainboard/mainboard.component.html
+++ b/src/app/home/mainboard/mainboard.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <form class="mat-elevation-z8" style="padding: 0 20px;">
+  <form class="example-container " >
     <mat-form-field style="width: 100%; "  >
       <mat-label>Tìm kiếm khách hàng, đại lý</mat-label>
       <input    type="email" matInput #querySearchAll (change)=" this.searchClientAndGroup(querySearchAll.value);"
@@ -7,53 +7,70 @@
 
     </mat-form-field>
   </form>
-  <div class="mat-elevation-z8">
+  <div class="example-container " >
 
-    <table mat-table [dataSource]="dataSource" matSort>
-
+    <mat-table  [dataSource]="dataSource" matSort>
       <!-- ID Column -->
       <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Id </th>
-        <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+        <mat-header-cell  *matHeaderCellDef mat-sort-header>Id</mat-header-cell>
+        <mat-cell  *matCellDef="let row">
+          <span class="mobile-label">Id:</span>
+          <span >{{row.id}}</span>
+
+        </mat-cell>
       </ng-container>
+
       <ng-container matColumnDef="officeName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Chi nhánh </th>
-        <td mat-cell *matCellDef="let row" > {{row.officeName}} </td>
+        <mat-header-cell  *matHeaderCellDef mat-sort-header>Chi nhánh</mat-header-cell>
+        <mat-cell  *matCellDef="let row" >
+          <span class="mobile-label">Chi nhánh:</span>
+
+          <span >{{row.officeName}}</span>
+        </mat-cell>
       </ng-container>
+
       <!-- Progress Column -->
       <ng-container matColumnDef="displayName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Tên khách hàng </th>
-        <td mat-cell *matCellDef="let row"> {{row.displayName}} </td>
+        <mat-header-cell  *matHeaderCellDef mat-sort-header>Tên khách hàng</mat-header-cell>
+        <mat-cell  *matCellDef="let row">
+          <span class="mobile-label">Khách hàng:</span>
+          <span >{{row.displayName}}</span>
+        </mat-cell>
       </ng-container>
 
       <!-- Name Column -->
       <ng-container matColumnDef="mobileNo">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Số ĐT </th>
-        <td mat-cell *matCellDef="let row"> {{row.mobileNo}} </td>
+        <mat-header-cell  *matHeaderCellDef mat-sort-header>Số ĐT</mat-header-cell>
+        <mat-cell  *matCellDef="let row">
+          <span class="mobile-label">Số ĐT:</span>
+          <span >{{row.mobileNo}}</span>
+        </mat-cell>
       </ng-container>
 
       <!-- Color Column -->
       <ng-container matColumnDef="documentKey">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Thẻ </th>
-        <td mat-cell *matCellDef="let row" > {{row.documentKey}} </td>
+        <mat-header-cell  *matHeaderCellDef mat-sort-header>Thẻ</mat-header-cell>
+        <mat-cell  *matCellDef="let row" >
+          <span class="mobile-label">Thẻ:</span>
+          <span >{{row.documentKey}}</span>
+        </mat-cell>
       </ng-container>
 
       <ng-container matColumnDef="bankName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Ngân hàng </th>
-        <td mat-cell *matCellDef="let row" > {{row.bankName}} </td>
+        <mat-header-cell  *matHeaderCellDef mat-sort-header>Ngân hàng</mat-header-cell>
+        <mat-cell  *matCellDef="let row" >
+          <span class="mobile-label">Ngân hàng:</span>
+          <span >{{row.bankName}}</span>
+        </mat-cell>
       </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"  class="select-row"
+      <mat-header-row  *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row  *matRowDef="let row; columns: displayedColumns;"  class="select-row"
       [routerLink]="['/clients', row.id, 'identities']"
       [queryParams]="{ typeViewClient: 'transaction'}"
-      ></tr>
+      ></mat-row>
 
-      <!-- Row shown when there is no matching data. -->
-      <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" colspan="4">No data matching the filter </td>
-      </tr>
-    </table>
+    </mat-table>
     <div *ngIf="isLoading"
    style="display: flex; justify-content: center; align-items: center; background: white;">
   <mat-progress-spinner
