--- a/src/app/home/mainboard/mainboard.component.scss
+++ b/src/app/home/mainboard/mainboard.component.scss
@@ -1,15 +1,44 @@
-table {
-  width: 100%;
-  .account-action-button{
-    min-width: 26px;
-    padding: 0 6px;
-    margin: 4px;
-    line-height: 25px;
-  }
-  tr.select-row:hover {
-    cursor: pointer;
-  }
+.example-container {
+  display: flex;
+  flex-direction: column;
+  max-height: 500px;
+  min-width: 300px;
+
 }
-i:hover {
-  cursor: pointer;
+
+mat-cell:first-of-type, mat-header-cell:first-of-type, mat-footer-cell:first-of-type {
+  padding-left: 0;
+}
+
+.mat-table {
+  overflow: auto;
+  max-height: 500px;
+}
+
+.mobile-label {
+  display: none;
+}
+
+@media(max-width: 720px) {
+
+  mat-cell, mat-header-cell, mat-footer-cell {
+
+    min-height: unset;
+  }
+
+  .mobile-label {
+    width: 100px;
+    display: inline-block;
+    font-weight: bold;
+  }
+
+  .mat-header-row {
+    display: none;
+  }
+
+  .mat-row {
+    flex-direction: column;
+    align-items: start;
+    padding: 8px 24px;
+  }
 }
