--- a/src/app/clients/clients.component.html
+++ b/src/app/clients/clients.component.html
@@ -16,8 +16,8 @@
       </button>
     </div>
   </div>
-  <div>
-    <table mat-table [dataSource]="dataSource" matSort>
+  <div class="example-container">
+    <table mat-table midasTableResponsive [dataSource]="dataSource" matSort>
 
       <!-- Name Column -->
       <ng-container matColumnDef="name">
