--- a/src/app/home/mainboard/mainboard.component.scss
+++ b/src/app/home/mainboard/mainboard.component.scss
@@ -5,6 +5,56 @@
   min-width: 300px;
 
 }
+tr.example-detail-row {
+  height: 0;
+}
+
+tr.example-element-row:not(.example-expanded-row):hover {
+  background: whitesmoke;
+}
+
+tr.example-element-row:not(.example-expanded-row):active {
+  background: #efefef;
+}
+
+.example-element-row td {
+  border-bottom-width: 0;
+}
+mat-row:hover {
+  background-color: #71d5f3;
+  color: white;
+  cursor: pointer;
+}
+
+.example-element-detail {
+  overflow: hidden;
+  display: flex;
+}
+
+.example-element-diagram {
+  min-width: 80px;
+  border: 2px solid black;
+  padding: 8px;
+  font-weight: lighter;
+  margin: 8px 0;
+  height: 104px;
+}
+.green { background-color: #cdcdd3 }
+.example-element-symbol {
+  font-weight: bold;
+  font-size: 40px;
+  line-height: normal;
+}
+
+.example-element-description {
+  padding: 10px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.example-element-description-attribution {
+  opacity: 0.5;
+}
 
 mat-cell:first-of-type, mat-header-cell:first-of-type, mat-footer-cell:first-of-type {
   padding-left: 0;
@@ -41,4 +91,8 @@ mat-cell:first-of-type, mat-header-cell:first-of-type, mat-footer-cell:first-of-
     align-items: start;
     padding: 8px 24px;
   }
+
+  mat-row, mat-footer-row {
+    min-height: unset;
+}
 }
