--- a/src/app/transaction/create-transaction/create-transaction.component.html
+++ b/src/app/transaction/create-transaction/create-transaction.component.html
@@ -1,45 +1,64 @@
 <div class="container m-b-5" fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="end" fxLayoutGap="1%">
   <div fxFlex="100%" align="center" class="header">
-    <h2 class="m-5">MÀN HÌNH GIAO DỊCH - THÔNG TIN GIAO DỊCH Rút tiền mặt</h2>
+    <h2 class="m-5">MÀN HÌNH GIAO DỊCH - THÔNG TIN GIAO DỊCH</h2>
   </div>
 </div>
 <div class="container" fxLayout="column" fxLayoutGap="2%">
-  <mat-card >
-    <div *ngIf="isLoading"
-   style="display: flex; justify-content: center; align-items: center; background: white;">
-  <mat-progress-spinner
-    color="warn"
-    mode="indeterminate">
-  </mat-progress-spinner>
-</div>
-    <div fxLayout="row wrap">
-      <div fxFlex="50%" fxLayout="row wrap" class="content">
-        <div fxFlex="100%" style="color: green; font-weight: bold">Loại giao dịch : Rút tiền mặt</div>
-        <div fxFlex="100%" fxLayout="row wrap">
-          <div fxFlex="30%">Thẻ thực hiện giao dịch</div>
-          <div fxFlex="70%" style="color: blue; font-weight: bold">{{transactionInfo.identifyClientDto.accountNumber}}</div>
+  <form [formGroup]="registerForm" >
+  <mat-card>
+
+    <div *ngIf="isLoading" style="display: flex; justify-content: center; align-items: center; background: white">
+      <mat-progress-spinner color="warn" mode="indeterminate"> </mat-progress-spinner>
+    </div>
+    <div fxLayout="row wrap" fxLayout.sm="column" fxLayout.xs="column">
+      <div fxFlex.gt-sm="50%" fxLayout="row wrap" class="content">
+        <div fxFlex="100%">
+          Loại giao dịch :
+          <span style="color: green; font-weight: bold" *ngIf="transactionInfo.type == 'cash'">RÚT TIỀN MẶT</span>
+          <span style="color: green; font-weight: bold" *ngIf="transactionInfo.type == 'rollTerm'">ĐÁO HẠN THẺ</span>
         </div>
-        <div fxFlex="100%" fxLayout="row wrap" class="content">
-          <div fxFlex="10%">Loại thẻ</div>
-          <div fxFlex="15%" style="color: blue; font-weight: bold">{{transactionInfo.identifyClientDto.accountType}}</div>
-          <div fxFlex="20%">Của ngân hàng</div>
-          <div fxFlex="55%" style="color: blue; font-weight: bold">{{transactionInfo.identifyClientDto.accountBank}}</div>
+        <div fxFlex="100%" fxLayout="row wrap" fxLayout.sm="column" fxLayout.xs="column">
+          <div fxFlex.gt-sm="30%">Thẻ thực hiện giao dịch</div>
+          <div fxFlex.gt-sm="70%" style="color: blue; font-weight: bold">
+            {{ transactionInfo.identifyClientDto?.accountNumber }}
+          </div>
         </div>
-        <div fxFlex="100%" fxLayout="row wrap">
-          <div fxFlex="30%">
+        <div fxFlex="100%" fxLayout="row wrap" fxLayout.sm="column" fxLayout.xs="column" class="content">
+          <div fxFlex.gt-sm="10%">Loại thẻ</div>
+          <div fxFlex.gt-sm="15%" style="color: blue; font-weight: bold">
+            {{ transactionInfo.identifyClientDto?.accountType }}
+          </div>
+          <div fxFlex.gt-sm="20%">Của ngân hàng</div>
+          <div fxFlex.gt-sm="55%" style="color: blue; font-weight: bold">
+            {{ transactionInfo.identifyClientDto?.accountBank }}
+          </div>
+        </div>
+        <div
+          fxFlex="100%"
+          fxLayout="row wrap"
+          fxLayout.sm="column"
+          fxLayout.xs="column"
+          *ngIf="transactionInfo.type == 'cash'"
+        >
+          <div fxFlex.gt-sm="50%">
             <mat-form-field appearance="fill">
               <mat-label>Tài khoản nhận tiền</mat-label>
-              <select matNativeControl [(ngModel)] = "transactionInfo.accountCash">
-                <option *ngFor="let account of transactionInfo.listAccAccount" [value]="account.documentKey">{{account.documentKey}}</option>
+              <select style="color: blue; font-weight: bold" matNativeControl [(ngModel)]="transactionInfo.accountCash">
+                <option *ngFor="let account of transactionInfo.listAccAccount" [value]="account.documentKey">
+                  {{ account.documentKey }}
+                </option>
               </select>
             </mat-form-field>
           </div>
-          <div fxFlex="30%">
+          <div fxFlex.gt-sm="50%">
             <mat-form-field appearance="fill">
               <mat-label>Chọn loại giao dịch </mat-label>
-              <select matNativeControl
-                      [(ngModel)] = "transactionInfo.productId"
-                      (change) = "this.calculateFeeTransaction()">
+              <select
+                style="color: blue; font-weight: bold"
+                matNativeControl
+                [(ngModel)]="transactionInfo.productId"
+                (change)="this.calculateFeeTransaction()"
+              >
                 <option value="CA01">RTM thông thường</option>
                 <option value="TEST">Test thẻ</option>
                 <option value="CA02">Lô lẻ</option>
@@ -48,45 +67,63 @@
           </div>
         </div>
 
-        <div fxFlex="100%" fxLayout="row wrap">
-          <div fxLayoutAlign=" center" fxFlex="20%">Thông tin giao dịch</div>
-          <div fxFlex="30%">
+        <div fxFlex="100%" fxLayout="row wrap" fxLayout.sm="column" fxLayout.xs="column">
+          <div fxLayoutAlign=" center" fxFlex.gt-sm="20%">Thông tin giao dịch</div>
+          <div fxFlex.gt-sm="30%">
             <mat-form-field>
               <mat-label>Nhập số tiền giao dịch</mat-label>
               <input
                 type="text"
                 class="center"
                 matInput
-                [(ngModel)] = "transactionInfo.requestAmount"
-                #amountTransaction
+                [(ngModel)]="transactionInfo.requestAmount"
                 (change)="this.changeAmountTransaction()"
-                (keyup)="amountTransaction.value = this.formatCurrency(amountTransaction.value)" />
+                (keyup)="amountTransaction.value = this.formatCurrency(amountTransaction.value)"
+                #amountTransaction
+                formControlName="requestAmount"
+                />
+              <mat-error *ngIf="ErrorValidate.requestAmountError">
+                Thông tin bắt buộc nhập!
+              </mat-error>
             </mat-form-field>
           </div>
-          <div fxFlex="10%">
+          <div fxFlex.gt-sm="10%">
             <mat-form-field>
               <mat-label>Nhập phí (%/giá trị giao dịch)</mat-label>
               <input
                 class="center"
-                matInput [(ngModel)]="transactionInfo.rate"
+                matInput
+
+                [(ngModel)]="transactionInfo.rate"
                 (change)="this.onchangeRateAndCheckValidRate()"
               />
+              <mat-error
+                *ngIf="ErrorValidate.requestRateError"
+              >
+              Thông tin bắt buộc nhập!
+              </mat-error>
             </mat-form-field>
           </div>
         </div>
       </div>
-      <div fxFlex="50%" fxLayout="row wrap">
+      <div fxFlex.gt-sm="50%" fxLayout="row wrap">
         <div fxFlex="100%" fxLayout="row wrap" class="content">
           <div fxFlex="30%">Tên khách hàng</div>
-          <div fxFlex="60%" class="left">{{transactionInfo.clientDto.displayName | uppercase}}</div>
+          <div fxFlex="60%" style="color: blue; font-weight: bold" class="left">
+            {{ transactionInfo.clientDto?.displayName | uppercase }}
+          </div>
         </div>
         <div fxFlex="100%" fxLayout="row wrap" class="content">
           <div fxFlex="30%">Thuộc đại lý</div>
-          <div fxFlex="60%" class="left">{{transactionInfo.clientDto.groupName | uppercase}}</div>
+          <div fxFlex="60%" style="color: blue; font-weight: bold" class="left">
+            {{ transactionInfo.clientDto?.groupName | uppercase }}
+          </div>
         </div>
         <div fxFlex="100%" fxLayout="row wrap" class="content">
           <div fxFlex="30%">Chi nhánh</div>
-          <div fxFlex="60%" class="left">{{transactionInfo.clientDto.officeName | uppercase}}</div>
+          <div fxFlex="60%" style="color: blue; font-weight: bold" class="left">
+            {{ transactionInfo.clientDto?.officeName | uppercase }}
+          </div>
         </div>
         <div fxFlex="100%" fxLayout="row wrap">
           <div fxFlex="100%" fxLayout="row wrap" class="content">
@@ -95,7 +132,7 @@
 
           <div fxFlex="100%" fxLayout="row wrap" class="content m-l-20">
             <div fxFlex="40%">Giá trị giao dịch</div>
-            <div fxFlex="20%">{{formatCurrency(transactionInfo.txnAmount)}}</div>
+            <div fxFlex="20%">{{ formatCurrency(transactionInfo.txnAmount) }}</div>
             <div fxFlex="20%">Tỉ lệ</div>
           </div>
           <div fxFlex="100%" style="color: red; font-weight: bold" fxLayout="row wrap" class="content m-l-20">
@@ -103,23 +140,22 @@
           </div>
           <div class="m-l-10" fxFlex="100%" fxLayout="row wrap" class="m-l-20 content">
             <div fxFlex="40%">Thực cho khách hàng</div>
-            <div fxFlex="20%">{{formatCurrency(transactionInfo.txnAmount)}}</div>
+            <div fxFlex="20%">{{ formatCurrency(transactionInfo.txnAmount) }}</div>
             <div fxFlex="20%"></div>
           </div>
           <div class="m-l-10" fxFlex="100%" fxLayout="row wrap" class="m-l-20 content">
             <div fxFlex="40%">Phí thu khách hàng</div>
-            <div fxFlex="20%">{{formatCurrency(transactionInfo.feeAmount)}}</div>
-            <div fxFlex="20%">{{transactionInfo.rate}}%</div>
+            <div fxFlex="20%">{{ formatCurrency(transactionInfo.feeAmount) }}</div>
+            <div fxFlex="20%">{{ transactionInfo.rate }}%</div>
           </div>
           <div fxFlex="100%" fxLayout="row wrap" class="content m-l-20">
             <div style="color: red; font-weight: bold" fxFlex="40%">Thu/chi bằng cách cấn trừ</div>
-            <div fxFlex="20%">{{formatCurrency(transactionInfo.txnAmountAfterFee)}}</div>
+            <div fxFlex="20%">{{ formatCurrency(transactionInfo.txnAmountAfterFee) }}</div>
             <div fxFlex="20%"></div>
           </div>
-          <div fxFlex="100%" fxLayout="row wrap" class="content m-l-20" *ngIf="transactionInfo.transactionId" >
-            <button (click)="this.downloadVoucherTransaction()" mat-raised-button color="primary" >
-              <fa-icon icon="download"></fa-icon>&nbsp;&nbsp;
-              Tải hóa đơn
+          <div fxFlex="100%" fxLayout="row wrap" class="content m-l-20" *ngIf="transactionInfo.transactionId">
+            <button (click)="this.downloadVoucherTransaction()" mat-raised-button color="primary">
+              <fa-icon icon="download"></fa-icon>&nbsp;&nbsp; Tải hóa đơn
             </button>
             <!-- <button (click)="this.uploadPic()" mat-raised-button color="primary" >
               <fa-icon icon="check"></fa-icon>&nbsp;&nbsp;
@@ -131,59 +167,146 @@
     </div>
   </mat-card>
   <mat-card fxLayout="row wrap" class="m-0">
-    <div fxFlex="100%"  >
-      <h3  align="center" style="color: blue;font-weight: bold;">Chọn máy POS để sử dụng giao dịch</h3>
+    <h3 *ngIf="transactionInfo.type == 'cash'" fxFlex align="center" style="color: blue; font-weight: bold">
+      Chọn máy POS để sử dụng giao dịch
+    </h3>
+    <h3
+      *ngIf="transactionInfo.type == 'rollTerm' && listRollTermBooking.length > 0"
+      fxFlex
+      align="center"
+      style="color: blue; font-weight: bold"
+    >
+      Lịch thực hiện đáo hạn thẻ (Tổng: {{ this.formatCurrency(this.totalBookingAmount) }})
+    </h3>
+    <div
+      fxFlex="100%"
+      align="center"
+      fxLayout.sm="column"
+      fxLayout.xs="column"
+      *ngIf="transactionInfo.type == 'rollTerm' && listRollTermBooking.length > 0"
+    >
+      <table mat-table #listBookingRollTermTable [dataSource]="dataSource">
+        <ng-container matColumnDef="no">
+          <th mat-header-cell *matHeaderCellDef>No.</th>
+          <td mat-cell *matCellDef="let booking; let i = index">{{ i + 1 }}</td>
+        </ng-container>
+        <ng-container matColumnDef="amountBooking">
+          <th mat-header-cell *matHeaderCellDef>Số tiền</th>
+          <td mat-cell *matCellDef="let booking; let i = index">
+            <input
+              matInput
+              [(ngModel)]="booking.amountBooking"
+              (change)="this.calculateTotalBookingAmount()"
+              (keyup)="booking.amountBooking = this.formatCurrency(booking.amountBooking)"
+            />
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="txnDate">
+          <th mat-header-cell *matHeaderCellDef>Ngày</th>
+          <td mat-cell *matCellDef="let booking">
+            <mat-form-field>
+              <input matInput opened="true" readonly [matDatepicker]="txnDatePicker" [(ngModel)]="booking.txnDate" />
+              <mat-datepicker-toggle matSuffix [for]="txnDatePicker"></mat-datepicker-toggle>
+              <mat-datepicker #txnDatePicker></mat-datepicker>
+            </mat-form-field>
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef>
+            <fa-icon
+              (click)="this.addBookingRow()"
+              title="Thêm dòng booking"
+              style="color: green"
+              icon="plus"
+            ></fa-icon>
+          </th>
+          <td mat-cell *matCellDef="let booking; let i = index">
+            <fa-icon
+              *ngIf="i > 0"
+              (click)="this.removeBookingRow(i)"
+              title="Xóa dòng booking"
+              style="color: red"
+              icon="times"
+            ></fa-icon>
+          </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
     </div>
-    <div fxFlex="100%" >
-      <div fxFlex="30%" fxLayout="row wrap" class="content">
+    <div fxFlex="100%" fxLayout.sm="column" fxLayout.xs="column" *ngIf="transactionInfo.type == 'cash'">
+      <div fxFlex.gt-sm="30%" fxLayout="row wrap" class="content">
         <div fxFlex="100%">
-          <mat-form-field style="width: 80%;" appearance="fill">
+          <mat-form-field style="width: 80%" appearance="fill">
             <mat-label>Chọn máy POS làm giao dịch</mat-label>
             <select (change)="this.getFeeByTerminal()" [(ngModel)]="transactionInfo.terminalId" matNativeControl>
-              <option *ngFor="let terminal of transactionInfo.listTerminal" [value]="terminal.terminalId">{{terminal.terminalName}}</option>
+              <option *ngFor="let terminal of transactionInfo.listTerminal" [value]="terminal.terminalId">
+                {{ terminal.terminalName }}
+              </option>
             </select>
           </mat-form-field>
-
         </div>
       </div>
-      <div fxFlex="16%" fxLayout="row wrap" class="content">
+      <div fxFlex.gt-sm="16%" fxLayout="row wrap" class="content">
         <div fxFlex="100%">
           <mat-form-field>
             <mat-label>Số tiền cần quẹt(VNĐ)</mat-label>
-            <input [(ngModel)]="transactionInfo.txnAmount" readonly matInput />
+            <input [(ngModel)]="transactionInfo.txnAmount"  readonly matInput />
+            <mat-error
+              *ngIf="ErrorValidate.requestTxnAmountError"
+              >
+              Thông tin bắt buộc nhập!
+            </mat-error>
           </mat-form-field>
         </div>
       </div>
-      <div fxFlex="16%" fxLayout="row wrap" class="content">
+      <div fxFlex.gt-sm="16%" fxLayout="row wrap" class="content">
         <div fxFlex="100%">
           <mat-form-field>
             <mat-label>Số tiền trên bill do POS in ra</mat-label>
-            <input matInput
-                   [(ngModel)]="transactionInfo.terminalAmount"
-                   #amountPosBill
-                   (change)="this.calculateFeeTransaction()"
-                   (keyup)="amountPosBill.value = this.formatCurrency(amountPosBill.value)" />
+            <input
+              matInput
+              [(ngModel)]="transactionInfo.terminalAmount"
+              #amountPosBill
 
+              (change)="this.calculateFeeTransaction()"
+              (keyup)="amountPosBill.value = this.formatCurrency(amountPosBill.value)"
+            />
+            <mat-error
+              *ngIf="ErrorValidate.requestTerminalAmountError"
+              >
+              Thông tin bắt buộc nhập!
+            </mat-error>
           </mat-form-field>
         </div>
       </div>
-      <div fxFlex="19%" fxLayout="row wrap" class="content">
+      <div fxFlex.gt-sm="19%" fxLayout="row wrap" class="content">
         <div fxFlex="80%">
           <mat-form-field>
             <mat-label> Số batch</mat-label>
-            <input matInput [(ngModel)]="transactionInfo.batchNo" />
+            <input matInput  [(ngModel)]="transactionInfo.batchNo" />
+            <mat-error
+              *ngIf="ErrorValidate.requestBatchNoError"
+              >
+              Thông tin bắt buộc nhập!
+            </mat-error>
           </mat-form-field>
         </div>
       </div>
-      <div fxFlex="19%" fxLayout="row wrap" class="content">
+      <div fxFlex.gt-sm="19%" fxLayout="row wrap" class="content">
         <div fxFlex="80%">
           <mat-form-field>
             <mat-label> Số trace</mat-label>
-            <input matInput [(ngModel)]="transactionInfo.traceNo" />
+            <input matInput  [(ngModel)]="transactionInfo.traceNo" />
+            <mat-error
+              *ngIf="ErrorValidate.requestTraceNoError"
+              >
+              Thông tin bắt buộc nhập!
+            </mat-error>
           </mat-form-field>
         </div>
       </div>
-      <!-- <div fxFlex="10%" fxLayout="row wrap" class="content">
+      <!-- <div fxFlex.gt-sm="10%" fxLayout="row wrap" class="content">
         <div fxFlex="100%"></div>
         <div fxFlex="100%">
           <section align="center">
@@ -192,15 +315,24 @@
         </div>
       </div> -->
     </div>
-    <div fxLayoutAlign="center center" fxFlex="100%"  >
-      <button (click)="this.submitTransaction()" mat-raised-button color="primary" >
-        <fa-icon icon="check"></fa-icon>&nbsp;&nbsp;
-        Hoàn tất giao dịch
+    <div fxLayoutAlign="center center" fxFlex="100%" class="m-t-10">
+      <button
+        (click)="this.submitTransactionCash()"
+        *ngIf="transactionInfo.type == 'cash'"
+        mat-raised-button
+        color="primary"
+      >
+        <fa-icon icon="check"></fa-icon>&nbsp;&nbsp; Hoàn tất giao dịch
       </button>
-      <!-- <button mat-raised-button color="primary">
-        <fa-icon icon="check"></fa-icon>&nbsp;&nbsp;
-        Khởi tạo giao dịch
-      </button> -->
+      <button
+        mat-raised-button
+        color="primary"
+        *ngIf="transactionInfo.type != 'cash'"
+        (click)="this.submitTransactionRollTerm()"
+      >
+        <fa-icon icon="check"></fa-icon>&nbsp;&nbsp; Khởi tạo giao dịch
+      </button>
     </div>
   </mat-card>
+</form>
 </div>
