--- a/src/app/transaction/create-transaction/create-transaction.component.scss
+++ b/src/app/transaction/create-transaction/create-transaction.component.scss
@@ -1,6 +1,15 @@
 .container {
   max-width: 120rem;
-
+  th.mat-header-cell {
+    padding: 0px 20px ;
+    text-align: center;
+  }
+  td.mat-cell, td.mat-footer-cell {
+    padding: 0px ;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    text-align: center;
+  }
   .content {
     div {
       margin: 0.2rem 0;
